layout colors adjustments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Luiz Felipe Portfolio - need help in your project? I can help you!">
+    <meta name="description" content="Lucas Santos Portfolio - need help in your project? I can help you!">
 
     <link rel="stylesheet" href="css\normalize.css">
     <link rel="stylesheet" href="css\small.css">
@@ -19,7 +19,7 @@
         <div class="header-content">
             <div class="header-logo-container">
               <div class="header-logo-img-cont">
-                <img class="logo" src="img/logo-flp.png" src="Logo-LP"/>
+                <img class="logo" src="img/logo-flp.png" alt="Lucas Logo"/>
               </div>
               <span class="header-logo">Lucas Santos</span>
             </div>
@@ -29,13 +29,13 @@
                   <a href="./index.html" class="header-link"> Home </a>
                 </li>
                 <li class="header-link-wrapper">
-                  <a href="./#about" class="header-link">About Me </a>
+                  <a href="#about" class="header-link">About Me </a>
                 </li>
                 <li class="header-link-wrapper">
-                  <a href="./#projects" class="header-link"> Projects </a>
+                  <a href="#projects" class="header-link"> Projects </a>
                 </li>
                 <li class="header-link-wrapper">
-                  <a href="./#contact" class="header-link"> Contact </a>
+                  <a href="#contact" class="header-link"> Contact </a>
                 </li>
               </ul>
               <div class="header-main-ham-menu-cont">
@@ -189,7 +189,7 @@
                     Start a Project!
                 </h2>
             </div>
-            <div class="interested-lp">
+            <div class="interested-lp" id="contact">
                 <p class="phrase-interest-lp"> Interested in work together and make your project happen? <span class="lets-talk=lp">Let's talk :)</span></p>
             </div>
         </section>
