--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Lucas Santos
                         </span> :)
                     </br>
-                    I am a developer focused on Software solutions that leads to the success of the overall product with a 
+                    I am a developer focused on Software solutions that lead to the success of the overall product with a 
                     background in Service Support, Incident Management, Agile methods, and Application Maintenance. 
                     </br>
                     </h1>
@@ -120,7 +120,7 @@
                     <div class="details-espec-lp">
                         <p class="phrase-knowme-lp">
                             My specialties include quickly learning new skills and business results and proceeds. I'm a <b>problem-solving</b> 
-                            and <b>software analytical</b>.
+                            and <b>software analyst</b>.
                             Responsible for <b>building features</b> and <b>deliverables</b> that model business problems and power enterprise-scale systems.
                             Implementing <b>Web solutions</b>, integrating with external systems through API's.
                         </p>
@@ -190,7 +190,9 @@
                 </h2>
             </div>
             <div class="interested-lp" id="contact">
-                <p class="phrase-interest-lp"> Interested in work together and make your project happen? <span class="lets-talk=lp">Let's talk :)</span></p>
+                <p class="phrase-interest-lp"> Interested in working together and making your project happen? 
+                    <span class="lets-talk=lp">Let's talk :)</span>
+                </p>
             </div>
         </section>
         <section>
