adjustments and image addition

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css\small.css">
     <link rel="stylesheet" href="css\medium.css">
     <link rel="stylesheet" href="css\large.css">
+    <link rel="icon" href="./img/iconsite.png" type="icon">
 
     <title>Lucas Santos - Portfolio</title>
     </head>
@@ -21,7 +22,7 @@
               <div class="header-logo-img-cont">
                 <img class="logo" src="img/logo-flp.png" alt="Lucas Logo"/>
               </div>
-              <span class="header-logo">Lucas Santos</span>
+              <span class="header-logo">&lt;/&gt; Lucas Santos</span>
             </div>
             <div class="header-main">
               <ul class="header-links">
@@ -91,14 +92,22 @@
                     </br>
                     </h1>
                     <div class="midia-container">
-                        <a class="media-link" href="https://www.linkedin.com/in/lucas-alcantara-91026733/" target="_blank"><img class="media-icon" src="img\linkedin-page.png" alt="linkedin"></a>
-                        <a class="media-link" href="https://github.com/LucasAlktr" target="_blank"><img class="media-icon" src="img\github-page.png" alt="github"></a>
-                        <a class="media-link" href="https://medium.com/@lucasbenington" target="_blank"><img class="media-icon" src="img\medium-page.png" alt="medium"></a>
-                        <a class="media-link" href="https://twitter.com/LucasAlk7" target="_blank"><img class="media-icon" src="img\twitter-page.png" alt="twitter"></a>
+                        <a class="media-link" href="https://www.linkedin.com/in/lucas-alcantara-91026733/" target="_blank">
+                            <img class="media-icon" src="img\linkedin-page.png" alt="linkedin" title="Lucas Santos’s LinkedIn profile">
+                        </a>
+                        <a class="media-link" href="https://github.com/LucasAlktr" target="_blank">
+                            <img class="media-icon" src="img\github-page.png" alt="github" title="Lucas Santos’s GitHub profile">
+                        </a>
+                        <a class="media-link" href="https://medium.com/@lucasbenington" target="_blank">
+                            <img class="media-icon" src="img\medium-page.png" alt="medium" title="Lucas Santos’s Medium profile">
+                        </a>
+                        <a class="media-link" href="https://twitter.com/LucasAlk7" target="_blank">
+                            <img class="media-icon" src="img\twitter-page.png" alt="twitter" title="Lucas Santos’s Twitter profile">
+                        </a>
                     </div>
                 </div>
                 <div class="lp-image">
-                    <img class="lp-image-div" src="img\Lp-perfil-g.png" alt="Luiz-image">
+                    <img class="lp-image-div" src="img\Lp-perfil-g.png" alt="LucasPicture-image" title="Lucas Santos’s Picture Image">
                 </div>
             </div>
         </section>
@@ -198,14 +207,22 @@
         <section>
             <div class="form-contactme">
                 <form class="form-contactme-lp" action="https://formspree.io/f/xayrokjb" method="POST">
-                    <label for="fname">Name:</label><br>
-                    <input class="textbox-form" type="text" id="fname" name="fname"><br>
-                    <label for="femail">Email:</label><br>
-                    <input class="textbox-form" type="email" id="femail" name="femail"><br>
-                    <label for="fsubj">Subject:</label><br>
-                    <input class="textbox-form" type="text" id="fsubj" name="fsubj"><br>
-                    <label for="textContact">Message:</label><br>
-                    <textarea id="textContact" name="textContact" rows="5" cols="50"></textarea><br>
+                    <div class="form-group">
+                        <label for="fname">Name:</label>
+                        <input class="textbox-form" type="text" id="fname" name="fname">
+                    </div>
+                    <div class="form-group">
+                        <label for="femail">Email:</label>
+                        <input class="textbox-form" type="email" id="femail" name="femail">
+                    </div>
+                    <div class="form-group">
+                        <label for="fsubj">Subject:</label>
+                        <input class="textbox-form" type="text" id="fsubj" name="fsubj">
+                    </div>
+                    <div class="form-group">
+                        <label for="textContact">Message:</label>
+                        <textarea id="textContact" name="textContact" rows="5" cols="50"></textarea>
+                    </div>
                     <input type="hidden" name="_subject" value="New submission from your website">
                     <button class="send-button" type="submit">Send Message</button>
                 </form>
@@ -220,13 +237,13 @@
            </h3>
            <p>
                 <a href="https://www.linkedin.com/in/lucas-alcantara-91026733/" target="_blank">
-                        <img class="media-link-footer" src="img\linkedin-page.png" alt="linkedin"></a>
+                        <img class="media-link-footer" src="img\linkedin-page.png" alt="linkedin" title="Lucas Santos’s LinkedIn profile"></a>
                 <a href="https://github.com/LucasAlktr" target="_blank">
-                        <img class="media-link-footer" src="img\github-page.png" alt="github"></a>
+                        <img class="media-link-footer" src="img\github-page.png" alt="github" title="Lucas Santos’s GitHub profile"></a>
                 <a href="https://medium.com/@lucasbenington" target="_blank">
-                        <img class="media-link-footer" src="img\medium-page.png" alt="medium"></a>
+                        <img class="media-link-footer" src="img\medium-page.png" alt="medium" title="Lucas Santos’s Medium profile"></a>
                 <a href="https://twitter.com/LucasAlk7" target="_blank">
-                        <img class="media-link-footer" src="img\twitter-page.png" alt="twitter"></a>
+                        <img class="media-link-footer" src="img\twitter-page.png" alt="twitter" title="Lucas Santos’s Twitter profile"></a>
            </p>
         </div>
         <div class="copyright-line">
