--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <br>
                         <span class="name-lp">
                             Lucas Santos
-                        </span> :)
+                        </span> 👋
                         </br>
                         I am a developer focused on Software solutions that lead to the success of the overall product
                         with a
@@ -115,7 +115,7 @@
         </section>
         <div class="link-page-about"><a id="about"></a></div>
         <section>
-            <h2 class="aboutme-title-lp"></a>About Me</h2>
+            <h2 class="aboutme-title-lp"></a>About Me 🔎</h2>
             <div class="main-about-lp">
                 <p class="phrase-about-lp">First and foremost, I love to solve problems. Since I started my career as an
                     internal at Avanade,
@@ -128,7 +128,7 @@
         <section>
             <div class="about-details-lp">
                 <h2 class="gettoknowme-lp">
-                    Get to know me!
+                    Get to know me! 📊
                 </h2>
                 <div class="details-espec-lp">
                     <p class="phrase-knowme-lp">
@@ -172,7 +172,7 @@
         </section>
         <section>
             <div class="projects-lp">
-                <h2 class="projectsfont-lp">Projects</h2>
+                <h2 class="projectsfont-lp">Projects 🧩</h2>
                 <p>
                 <h3 class="some-works-lp">
                     A selection of some of my works:
@@ -203,7 +203,7 @@
         <section>
             <div class="start-project-lp">
                 <h2 class="startaproject-lp">
-                    Start a Project!
+                    Start a Project! 🚀
                 </h2>
             </div>
             <div class="interested-lp" id="contact">
