lets talk adjustment

--- a/index.html
+++ b/index.html
@@ -312,9 +312,10 @@
                 </h2>
             </div>
             <div class="interested-lp" id="contact">
-                <p class="phrase-interest-lp"> Interested in working together and making your project happen?
-                    <span class="lets-talk=lp">Let's talk :)</span>
-                </p>
+                <h3 class="phrase-interest-lp"> Interested in working together and making your project happen? 
+                    
+                </h3>
+                <span class="lets-talk-lp"> Let's talk! 💬</span>
             </div>
         </section>
         <section>
