--- a/index.html
+++ b/index.html
@@ -323,19 +323,19 @@
                 <form class="form-contactme-lp" action="https://formspree.io/f/xayrokjb" method="POST">
                     <div class="form-group">
                         <label for="fname">Name:</label>
-                        <input class="textbox-form" type="text" id="fname" name="fname">
+                        <input class="textbox-form" type="text" id="fname" name="fname" required>
                     </div>
                     <div class="form-group">
                         <label for="femail">Email:</label>
-                        <input class="textbox-form" type="email" id="femail" name="femail">
+                        <input class="textbox-form" type="email" id="femail" name="femail" required>
                     </div>
                     <div class="form-group">
                         <label for="fsubj">Subject:</label>
-                        <input class="textbox-form" type="text" id="fsubj" name="fsubj">
+                        <input class="textbox-form" type="text" id="fsubj" name="fsubj" required>
                     </div>
                     <div class="form-group">
                         <label for="textContact">Message:</label>
-                        <textarea id="textContact" name="textContact" rows="5" cols="50"></textarea>
+                        <textarea id="textContact" name="textContact" rows="5" cols="50" required></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="New submission from your website">
                     <button class="send-button" type="submit">Send Message</button>
