background and font adjustments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Lucas Santos - Portfolio</title>
 </head>
 
-<body id="body">
+<body id="body" class="body-container-lp">
 
     <header class="site-menu">
 
@@ -41,9 +41,6 @@
                 <div class="header-main-ham-menu-cont">
                     <img src="img\menu-hamburguer.png" alt="hamburger menu" class="header-main-ham-menu" />
                     <img src="img\x.png" alt="hamburger menu close" class="header-main-ham-menu-close disp-none" />
-                </div>
-                <div class="div-mode">
-                    <img id="light-mode-toggle" class="mode" src="img/icons-light-off.png" alt="Dark or Light Mode" />
                 </div>
             </div>
 
