--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         <section>
             <h2 class="aboutme-title-lp"></a>About Me 🔎</h2>
             <div class="main-about-lp">
-                <p class="phrase-about-lp">First and foremost, I love to solve problems. Since I started my career as an
-                    internal at Avanade,
-                    I have been obsessed with the idea of using software to solve practical problems. Software
-                    engineering is an endless
-                    puzzle that I am passionately committed to solving and learning every day.
+                <p class="phrase-about-lp">Firstly, I love <b>solving problems.</b> Since I started my career as an intern at Avanade, 
+                    I've been obsessed with the opportunity to helping people find technology solutions in their workflow. 
+                    Throughout my career working for a consultancy company, I had enomerous <b>challenges and achievements.</b>
+                    Recently, I have been facing my biggest challenge: <b>changing country and professional focus to Web Developer.</b> 
+                    Web Development is an endless puzzle that I am passionately committed to learning more and more every day.
                 </p>
             </div>
         </section>
@@ -160,8 +160,8 @@
                     <div class="skill-item">JIRA</div>
                     <div class="skill-item">Git</div>
                     <div class="skill-item">Jenkins</div>
-                    <div class="skill-item">Docker</div>
-                    <div class="skill-item">Splunk</div>
+                    <div class="skill-item">Scrum</div>
+                    <div class="skill-item">ITIL</div>
                     <a id="projects"></a>
                 </div>
                 </p>
