--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                             <div class="slide-content">
                                 <img class="img-feedback" src="./img/Valter-feedback.png" alt="lucas external feedback image" style="display: none;">
                                 <img class="img-feedback" src="./img/Diegop-feedback.png" alt="lucas external feedback image" style="display: none;">
-                                <img class="img-feedback" src="./img/Renata-feedback.png" alt="lucas external feedback image" style="display: none;">
-                                <img class="img-feedback" src="./img/Felipe-feedback.png" alt="lucas external feedback image">
+                                <img class="img-feedback" src="./img/Renata-feedback.PNG" alt="lucas external feedback image" style="display: none;">
+                                <img class="img-feedback" src="./img/Felipe-feedback.PNG" alt="lucas external feedback image">
                             </div>
                         </div>
                     </div>
