--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <div class="project-image-container">
                             <a href="https://github.com/LucasAlktr" target="_blank" class="project-img">
                                 <img class="laptop-img" src="img/laptop-pj.png" alt="laptop image">
-                                <img class="project-img-detail" src="./img/coming-soon.jpg" alt="Project image">
+                                <img class="project-img-detail" src="./img/TodoApp.PNG" alt="Project image">
                             </a>
                         </div>
                         <div class="project-details">
@@ -220,18 +220,19 @@
                                 Task Management
                             </h4>
                             <p class="phrase-project-lp">
-                                This project is a React-based Task Management application leveraging modern development
-                                practices such as functional components and hooks. It offers a comprehensive solution
-                                for organizing tasks effectively. Users can seamlessly add, edit, remove, and search for
-                                tasks, providing a streamlined task management experience.
+                                This project is a React and Firebase based Task Management application leveraging modern development
+                                practices such as functional components, hooks and Firestone database. It offers a comprehensive solution
+                                for register tasks. Users can seamlessly add, edit status and remove tasks, 
+                                providing a streamlined task management experience.
                             </p>
                             <ul class="project-tec">
                                 <li>React</li>
-                                <li>CSS</li>
+                                <li>Firestone</li>
+                                <li>SCSS</li>
                             </ul>
                             <div class="project-links">
                                 <div class="external-project-link">
-                                    <a href="https://github.com/LucasAlktr" class="link-item-project"
+                                    <a href="https://github.com/LucasAlktr/task-management" class="link-item-project"
                                         target="_blank">Code</a>
                                     <img src="./img/github.png" alt="github Icon">
                                 </div>
