--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </p>
             </div>
 
-            
+
             <div class="container-feedback">
                 <div class="slider">
                     <div class="slider-controls">
@@ -136,14 +136,18 @@
                         <label for="btn-3"></label>
                         <label for="btn-4"></label>
                     </div>
-            
+
                     <div class="slides-container">
                         <div class="slide">
                             <div class="slide-content">
-                                <img class="img-feedback" src="./img/Valter-feedback.png" alt="lucas external feedback image" style="display: none;">
-                                <img class="img-feedback" src="./img/Diegop-feedback.png" alt="lucas external feedback image" style="display: none;">
-                                <img class="img-feedback" src="./img/Renata-feedback.PNG" alt="lucas external feedback image" style="display: none;">
-                                <img class="img-feedback" src="./img/Felipe-feedback.PNG" alt="lucas external feedback image">
+                                <img class="img-feedback" src="./img/Valter-feedback.png"
+                                    alt="lucas external feedback image" style="display: none;">
+                                <img class="img-feedback" src="./img/Diegop-feedback.png"
+                                    alt="lucas external feedback image" style="display: none;">
+                                <img class="img-feedback" src="./img/Renata-feedback.PNG"
+                                    alt="lucas external feedback image" style="display: none;">
+                                <img class="img-feedback" src="./img/Felipe-feedback.PNG"
+                                    alt="lucas external feedback image">
                             </div>
                         </div>
                     </div>
@@ -206,33 +210,36 @@
                 </p>
             </div>
 
+
+
             <section class="project-section">
                 <div class="project-content">
                     <div class="project-details-container">
                         <div class="project-image-container">
                             <a href="https://github.com/LucasAlktr" target="_blank" class="project-img">
                                 <img class="laptop-img" src="img/laptop-pj.png" alt="laptop image">
-                                <img class="project-img-detail" src="./img/TodoApp.PNG" alt="Project image">
+                                <img class="project-img-detail" src="./img/BRCafe.PNG" alt="Project image">
                             </a>
                         </div>
                         <div class="project-details">
                             <h4 class="project-item-lp">
-                                Task Management
+                                Brazilian Cafe
                             </h4>
                             <p class="phrase-project-lp">
-                                This project is a React and Firebase based Task Management application leveraging modern development
-                                practices such as functional components, hooks and Firestone database. It offers a comprehensive solution
-                                for register tasks. Users can seamlessly add, edit status and remove tasks, 
-                                providing a streamlined task management experience.
+                                This project centers around a conceptual Brazilian coffeehouse establishment
+                                development, serving as my final college React project. While leveraging React as the
+                                fundamental framework, I extended its functionality through integration with the Google
+                                Maps API and Firestore database management.
                             </p>
                             <ul class="project-tec">
                                 <li>React</li>
-                                <li>Firestone</li>
                                 <li>SCSS</li>
+                                <li>API</li>
+                                <li>Firestore</li>
                             </ul>
                             <div class="project-links">
                                 <div class="external-project-link">
-                                    <a href="https://github.com/LucasAlktr/task-management" class="link-item-project"
+                                    <a href="https://github.com/LucasAlktr/BrazilCafeStore/tree/main/br_cafe_store_app" class="link-item-project"
                                         target="_blank">Code</a>
                                     <img src="./img/github.png" alt="github Icon">
                                 </div>
@@ -253,27 +260,29 @@
                         <div class="project-image-container">
                             <a href="https://github.com/LucasAlktr" target="_blank" class="project-img">
                                 <img class="laptop-img" src="img/laptop-pj.png" alt="laptop image">
-                                <img class="project-img-detail" src="./img/coming-soon.jpg" alt="Project image">
+                                <img class="project-img-detail" src="./img/TodoApp.PNG" alt="Project image">
                             </a>
                         </div>
                         <div class="project-details">
                             <h4 class="project-item-lp">
-                                Cloud Vid Typography
+                                Task Management
                             </h4>
                             <p class="phrase-project-lp">
-                                This project focuses on creating visually appealing dashboards with clear typography,
-                                elements, and data visualization, while ensuring consistency and incorporating the
-                                client's branding elements. The project involves creating dashboards using HTML, CSS,
-                                and JavaScript with D3 for data visualization.
+                                This project is a React and Firebase based Task Management application leveraging modern
+                                development
+                                practices such as functional components, hooks and Firestone database. It offers a
+                                comprehensive solution
+                                for register tasks. Users can seamlessly add, edit status and remove tasks,
+                                providing a streamlined task management experience.
                             </p>
                             <ul class="project-tec">
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
+                                <li>React</li>
+                                <li>Firestore</li>
+                                <li>SCSS</li>
                             </ul>
                             <div class="project-links">
                                 <div class="external-project-link">
-                                    <a href="https://github.com/LucasAlktr" class="link-item-project"
+                                    <a href="https://github.com/LucasAlktr/task-management" class="link-item-project"
                                         target="_blank">Code</a>
                                     <img src="./img/github.png" alt="github Icon">
                                 </div>
