--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                     <img src="./img/github.png" alt="github Icon">
                                 </div>
                                 <div class="external-project-link">
-                                    <a href="https://github.com/LucasAlktr" class="link-item-project"
+                                    <a href="https://lucasalktr.github.io/task-management/" class="link-item-project"
                                         target="_blank">Live Demo</a>
                                     <img src="./img/external-link.png" alt="external Link">
                                 </div>
